--- a/cards/src/pages/login.css
+++ b/cards/src/pages/login.css
@@ -5,6 +5,10 @@ body {
 
 .loginForm {
   padding-top: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .loginWall img {
