--- a/cards/src/components/sidebar.css
+++ b/cards/src/components/sidebar.css
@@ -4,7 +4,7 @@
 }
 
 .sidebarLogout {
-  margin-top: 10rem;
+  margin-top: 2rem;
 }
 
 @media (max-width: 1100px) {
@@ -14,6 +14,10 @@
     object-fit: cover;
     border-radius: 50%;
     margin: 2rem;
+  }
+
+  #homePic:hover {
+    transform: scale(1.1);
   }
 }
 
@@ -25,6 +29,10 @@
     border-radius: 50%;
     margin: 2rem;
   }
+
+  #homePic:hover {
+    transform: scale(1.1);
+  }
 }
 
 @media (max-width: 850px) {
@@ -35,6 +43,10 @@
     border-radius: 50%;
     margin: 2rem;
   }
+
+  #homePic:hover {
+    transform: scale(1.1);
+  }
 }
 
 @media (max-width: 740px) {
@@ -44,6 +56,10 @@
     object-fit: cover;
     border-radius: 50%;
     margin: 1rem;
+  }
+
+  #homePic:hover {
+    transform: scale(1.1);
   }
 }
 
