--- a/cards/src/components/card.css
+++ b/cards/src/components/card.css
@@ -1,29 +1,3 @@
-#background {
-  width: 400px;
-  height: 400px;
-  object-fit: cover;
-  position: relative;
-  right: 50px;
-  top: -30px;
-}
-
-#character {
-  position: absolute; /* Cambiado a absolute */
-  object-fit: contain;
-  width: 100%;
-  height: 65%;
-  z-index: 0; /* Cambiado a 1 */
-  bottom: 25px; /* Cambiado a 0 */
-}
-
-#cardName {
-  position: absolute; /* Cambiado a absolute */
-  z-index: 1; /* Cambiado a 1 */
-  bottom: 260px; /* Cambiado a 0 */
-  left: 25%;
-  font-size: 1.3rem;
-}
-
 .characterModal {
   color: white;
   background-color: rgb(37, 36, 36);
@@ -31,12 +5,116 @@
 
 .characterModalPic {
   height: 400px;
+  margin: 15%;
 }
 
-.my-atropos {
-  width: 25%;
-  height: 350px;
-  margin: auto;
-  margin-top: 1rem;
-  border-radius: 10%;
+@media (min-width: 994px) {
+  .my-atropos {
+    width: 30%;
+    height: 350px;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 10%;
+  }
+
+  #character {
+    position: absolute; /* Cambiado a absolute */
+    object-fit: contain;
+    width: 100%;
+    height: 65%;
+    z-index: 0; /* Cambiado a 1 */
+    bottom: 25px; /* Cambiado a 0 */
+  }
+
+  #background {
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    position: relative;
+    right: 50px;
+    top: -30px;
+  }
+
+  #cardName {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 1; /* Cambiado a 1 */
+    bottom: 260px; /* Cambiado a 0 */
+    left: 25%;
+    font-size: 1.3rem;
+  }
+}
+
+@media (max-width: 993px) {
+  .my-atropos {
+    width: 50%;
+    height: 400px;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 10%;
+  }
+
+  #character {
+    position: absolute; /* Cambiado a absolute */
+    object-fit: contain;
+    width: 100%;
+    height: 65%;
+    z-index: 2;
+    bottom: 20px; /* Cambiado a 0 */
+  }
+
+  #background {
+    width: 400px;
+    height: 450px;
+    object-fit: cover;
+    position: relative;
+    right: 50px;
+    top: -30px;
+  }
+
+  #cardName {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 1;
+    bottom: 280px; /* Cambiado a 0 */
+    left: 25%;
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .my-atropos {
+    width: 75%;
+    height: 370px;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border-radius: 10%;
+  }
+
+  #character {
+    position: absolute; /* Cambiado a absolute */
+    object-fit: contain;
+    width: 100%;
+    height: 70%;
+    z-index: 2;
+    bottom: 20px; /* Cambiado a 0 */
+  }
+
+  #background {
+    width: 500px;
+    height: 450px;
+    object-fit: cover;
+    position: relative;
+    right: 50px;
+    top: -50px;
+  }
+
+  #cardName {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 1;
+    bottom: 280px; /* Cambiado a 0 */
+    left: 25%;
+    font-size: 1.5rem;
+  }
 }
