--- a/cards/src/pages/team.css
+++ b/cards/src/pages/team.css
@@ -1,6 +1,6 @@
 .team-member {
   border: 1px white solid;
-  width: 25%;
+  /* width: 25%; */
   margin: auto;
   border-radius: 8px;
   height: 350px;
