--- a/cards/src/components/card.css
+++ b/cards/src/components/card.css
@@ -8,6 +8,11 @@
   margin: 15%;
 }
 
+.card-disabled {
+  opacity: 0.5; /* Puedes ajustar el valor de opacidad según lo desees */
+  pointer-events: painted;
+}
+
 @media (min-width: 994px) {
   .my-atropos {
     width: 30%;
@@ -43,6 +48,17 @@
     left: 25%;
     font-size: 1.3rem;
   }
+
+  #lockedText {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 1; /* Cambiado a 1 */
+    bottom: 5px; /* Cambiado a 0 */
+    left: 65%;
+    font-size: 1.5rem;
+    border-radius: 15px;
+    background-color: rgb(0, 81, 255);
+    padding: 0.5rem;
+  }
 }
 
 @media (max-width: 993px) {
@@ -60,7 +76,7 @@
     object-fit: contain;
     width: 100%;
     height: 65%;
-    z-index: 2;
+    /* z-index: 2; */
     bottom: 20px; /* Cambiado a 0 */
   }
 
@@ -79,6 +95,17 @@
     bottom: 280px; /* Cambiado a 0 */
     left: 25%;
     font-size: 1.5rem;
+  }
+
+  #lockedText {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 1; /* Cambiado a 1 */
+    bottom: 5px; /* Cambiado a 0 */
+    left: 65%;
+    font-size: 1.5rem;
+    border-radius: 15px;
+    background-color: rgb(0, 81, 255);
+    padding: 0.5rem;
   }
 }
 
@@ -116,5 +143,16 @@
     bottom: 280px; /* Cambiado a 0 */
     left: 25%;
     font-size: 1.5rem;
+  }
+
+  #lockedText {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 1; /* Cambiado a 1 */
+    bottom: 5px; /* Cambiado a 0 */
+    left: 30%;
+    font-size: 1rem;
+    border-radius: 15px;
+    background-color: rgb(0, 81, 255);
+    padding: 0.5rem;
   }
 }
