--- a/cards/src/pages/home.css
+++ b/cards/src/pages/home.css
@@ -4,6 +4,39 @@
   height: 100vh;
 }
 
+.pointSpace1 {
+  bottom: 0;
+  left: 25%;
+  margin: 1rem;
+  padding: 1rem;
+  position: absolute;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: black;
+}
+
+.pointSpace2 {
+  bottom: 0;
+  left: 50%;
+  margin: 1rem;
+  padding: 1rem;
+  position: absolute;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: black;
+}
+
+.pointSpace3 {
+  bottom: 0;
+  left: 75%;
+  margin: 1rem;
+  padding: 1rem;
+  position: absolute;
+  border: 1px solid white;
+  border-radius: 10px;
+  background-color: black;
+}
+
 @media (max-width: 575px) {
   .sidebar {
     display: none;
