--- a/cards/src/components/sidebar.css
+++ b/cards/src/components/sidebar.css
@@ -4,7 +4,7 @@
 }
 
 .sidebarLogout {
-  margin-top: 2rem;
+  margin-top: 5vh;
 }
 
 @media (max-width: 1100px) {
@@ -18,6 +18,10 @@
 
   #homePic:hover {
     transform: scale(1.1);
+  }
+
+  .sidebarLink {
+    font-size: 1rem;
   }
 }
 
@@ -69,6 +73,7 @@
 
 .sidebarLink {
   cursor: pointer;
+  margin: 1.5rem;
 }
 
 .sidebarLink:hover {
