--- a/cards/src/pages/aboutProject.css
+++ b/cards/src/pages/aboutProject.css
@@ -1,16 +1,52 @@
-.my-atropos3 {
-  height: 23rem;
-  width: 70%;
-  margin-left: 25%;
-  /* border-radius: 10px; */
-  /* overflow: hidden; */
+@media (max-width: 767px) {
+  .my-atropos3 {
+    height: 20rem;
+    width: 65%;
+    /* margin-left: 25%; */
+    /* border-radius: 10px; */
+    /* overflow: hidden; */
+  }
+  .myPic {
+    object-fit: cover;
+    position: relative;
+    width: 100%;
+    /* bottom: 4rem; */
+    height: 23rem;
+  }
 }
 
-.myPic {
-  object-fit: contain;
-  position: relative;
-  width: 100%;
-  bottom: 4rem;
+@media (max-width: 430px) {
+  .my-atropos3 {
+    height: 15rem;
+    width: 65%;
+    /* margin-left: 25%; */
+    /* border-radius: 10px; */
+    /* overflow: hidden; */
+  }
+  .myPic {
+    object-fit: cover;
+    position: relative;
+    width: 100%;
+    /* bottom: 4rem; */
+    height: 18rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .my-atropos3 {
+    height: 23rem;
+    width: 100%;
+    margin-left: 25%;
+    /* border-radius: 10px; */
+    /* overflow: hidden; */
+  }
+  .myPic {
+    object-fit: cover;
+    position: relative;
+    width: 100%;
+    bottom: 2rem;
+    height: 30rem;
+  }
 }
 
 #portfolioLogo {
