--- a/cards/src/pages/home.css
+++ b/cards/src/pages/home.css
@@ -1,9 +1,3 @@
-.wallpaper {
-  width: 100%;
-  object-fit: cover;
-  height: 100vh;
-}
-
 .navbarPic {
   object-fit: cover;
   height: 2rem;
@@ -28,8 +22,48 @@
   display: block;
 }
 
+@media (min-width: 576px) {
+  html,
+  body {
+    overflow-y: hidden;
+  }
+
+  .infoLogo {
+    position: absolute;
+    bottom: 90%;
+    left: 90%;
+    color: black;
+    font-size: 2rem;
+  }
+
+  .wallpaper {
+    width: 100%;
+    object-fit: cover;
+    height: 100vh;
+  }
+}
+
 @media (max-width: 575px) {
   .sidebar {
     display: none;
+  }
+
+  .wallpaper {
+    width: 100%;
+    object-fit: cover;
+    height: 90vh;
+  }
+
+  .infoLogo {
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    color: rgb(0, 102, 255);
+    font-size: 2rem;
+    z-index: 0;
+  }
+
+  .picContain {
+    position: absolute;
   }
 }
