--- a/cards/src/pages/home.css
+++ b/cards/src/pages/home.css
@@ -23,17 +23,14 @@
 }
 
 @media (min-width: 576px) {
-  html,
-  body {
-    overflow-y: hidden;
-  }
-
   .infoLogo {
     position: absolute;
     bottom: 90%;
     left: 90%;
     color: black;
     font-size: 2rem;
+    padding: 0;
+    margin: 0;
   }
 
   .wallpaper {
