--- a/cards/src/pages/home.css
+++ b/cards/src/pages/home.css
@@ -22,6 +22,12 @@
   display: block;
 }
 
+.ruleModalPic {
+  width: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
 @media (min-width: 576px) {
   .infoLogo {
     position: absolute;
