--- a/cards/src/pages/home.css
+++ b/cards/src/pages/home.css
@@ -37,6 +37,11 @@
     font-size: 2rem;
     padding: 0;
     margin: 0;
+    cursor: pointer;
+  }
+
+  .infoLogo:hover {
+    transform: scale(1.5);
   }
 
   .wallpaper {
