--- a/cards/src/components/card.css
+++ b/cards/src/components/card.css
@@ -65,6 +65,19 @@
     background-color: rgb(139, 149, 170);
     padding: 0.5rem;
   }
+
+  #recruitText {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 1; /* Cambiado a 1 */
+    bottom: 5px; /* Cambiado a 0 */
+    left: 50%;
+    font-size: 1.5rem;
+    color: white;
+    border: 1px solid white;
+    border-radius: 15px;
+    background-color: rgb(6, 214, 6);
+    padding: 0.5rem;
+  }
 }
 
 @media (max-width: 993px) {
@@ -119,6 +132,19 @@
     background-color: rgb(139, 149, 170);
     padding: 0.5rem;
   }
+
+  #recruitText {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 1; /* Cambiado a 1 */
+    bottom: 5px; /* Cambiado a 0 */
+    left: 50%;
+    font-size: 1.5rem;
+    color: white;
+    border: 1px solid white;
+    border-radius: 15px;
+    background-color: rgb(6, 214, 6);
+    padding: 0.5rem;
+  }
 }
 
 @media (max-width: 576px) {
@@ -171,6 +197,19 @@
     border: 1px solid black;
     border-radius: 15px;
     background-color: rgb(139, 149, 170);
+    padding: 0.5rem;
+  }
+
+  #recruitText {
+    position: absolute; /* Cambiado a absolute */
+    z-index: 5; /* Cambiado a 1 */
+    bottom: 5px; /* Cambiado a 0 */
+    left: 45%;
+    font-size: 1rem;
+    color: white;
+    border: 1px solid white;
+    border-radius: 15px;
+    background-color: rgb(6, 214, 6);
     padding: 0.5rem;
   }
 }
