--- a/cards/src/pages/store.css
+++ b/cards/src/pages/store.css
@@ -1,4 +1,14 @@
 .filterButton {
-  width: 30%;
+  width: 33%;
   padding: 1rem;
+  display: flex;
+  justify-content: space-around;
+}
+
+@media (max-width: 576px) {
+  .filterSize {
+    font-size: 0.8rem;
+    margin: 1rem;
+    padding: 0.5rem;
+  }
 }
