--- a/cards/src/components/sidebar.css
+++ b/cards/src/components/sidebar.css
@@ -1,3 +1,5 @@
+@import url(../variables.css);
+
 #sidebar {
   height: 100vh;
   background-color: black;
@@ -90,7 +92,7 @@
 
 .sidebarLink:hover {
   transform: scale(1.1);
-  color: rgb(255, 216, 88);
+  color: var(--principal-color);
 }
 
 .lin {
